[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://assets/scripts/paused.gd" id="1"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.5
offset_top = 270.0
offset_right = 58.5
offset_bottom = 301.0
grow_horizontal = 2
text = " Continue"

[node name="Button2" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.5
offset_top = -301.0
offset_right = 58.5
offset_bottom = -270.0
grow_horizontal = 2
grow_vertical = 0
text = "Quit"

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_button_2_pressed"]
